# allot

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
bench/: CMakeLists.txt  base.cpp  numa.cpp
include/allot/: Allocator.h  LinearAllocator.h  MallocAllocator.h  NumaNodeAllocator.h  alloc_adapter.h  config.h.in
src/: Allocator.cpp  CMakeLists.txt  LinearAllocator.cpp  MallocAllocator.cpp  NumaNodeAllocator.cpp  TracingAllocator.cpp
src/include/allot/: Allocator.h  LinearAllocator.h  NumaNodeAllocator.h  TracingAllocator.h  alloc_adapter.h  map.h  set.h  unordered_map.h  vector.h
test/: CMakeLists.txt  generic_allocator.cpp
